# right-now

./: .env.example  .gitignore  .prettierrc.json  AGENTS.md  PLAN_PTY_SESSION_RESUMPTION.md  README.md  TESTING.md  TODO-TEST-HARNESS.md  TODO.md  biome.json  explainer-todomd-lifecycle-in-right-now.local.html  index-test.html  lint-staged.config.js  package.json  tsconfig.bun-test.json  tsconfig.json  vite.config.test.ts  vite.config.ts
.beads/: issues.jsonl
.context/plans/: context-resurrection-tech-debt.md
docs/: 2025-12-PLAN-TODO-TERMINAL-SESSIONS.md  2026-02-PLAN-CONTEXT-RESURRECTION.md  2026-02-PLAN-HOLISTIC-ROADMAP.md  PLAN-EVENT-DRIVEN-ARCHITECTURE.md  PLAN-PTY-TESTING-HARDENING.md  SOUND_PACK_GUIDE.md  ai-task-generation-guide.md  attention-notifications.md  cli-installation.md  context-resurrection.md  guide-Cross-Platform Audio and Sound Pack Mana.md  jotai-guide.md  jotai-refactor-plan.md  time-tracking-feature.md  todo_shell_matrix.md  ui-style-guidelines.md
ideas/: context-resurrection.md  living-workspace.md  weekly-rhythm.md
script/: install-todo-shim.ps1  install-todo-shim.sh  postinstall-setup.mts  smoke-test-bundle.mts  tauri-wrapper.mts
soundpack-scripts/: gen-jennifer-chaplin.mts  gen-serena.mts  generateSounds.mts
src/: App.tsx  main-test.tsx  main.tsx  ui.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.test.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: cli_paths.rs  lib.rs  macos_title_bar.rs  main.rs  test_harness.rs  test_utils.rs
src-tauri/src/context_resurrection/: capture.rs  mod.rs  models.rs  query.rs  store.rs
src-tauri/src/session/: attention.rs  config.rs  daemon_client.rs  markdown.rs  mod.rs  notify.rs  persistence.rs  protocol.rs  runtime.rs  shell_integration.rs
src-tauri/test-fixtures/: complex.md  empty.md  minimal.md  with-sessions.md
src-tauri/tests/: cr_list_limit_enforcement.rs  protocol_fixtures.rs  protocol_frame_limits.rs  shell_prompt_integration.rs
src-tauri/tests/helpers/: daemon_guard.rs  mod.rs  polling.rs
src/__tests__/: imports.test.ts  startup.test.ts
src/components/: OpenProjectSplitButton.tsx  ResurrectionCard.tsx  SessionsDebugPanel.tsx  SessionsPanel.tsx  StateControls.tsx  TaskList.tsx  TestHarness.tsx  Timer.tsx  Walkthrough.tsx  Welcome.tsx
src/lib/: MapOrSetDefault.ts  ProjectStateEditor.ts  SessionClient.ts  clock.ts  debounce.ts  editor-actions.ts  events.ts  index.ts  jotai-types.ts  project.ts  sound-player.ts  sounds.ts  (+6 more)
(+67 files in other folders)
