[package]
name = "rn-desktop-2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "rn-desktop-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rn_desktop_2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
rodio = { version = "0.17", features = ["symphonia-mp3"] }
rc-zip-sync = "4.2.4"
crossterm = "0.27"
signal-hook = "0.3"
once_cell = "1"

# Session daemon dependencies
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "signal", "io-util", "net", "sync", "time", "fs"] }
portable-pty = "0.8"
anyhow = "1"
thiserror = "1"
dirs = "5"
fs2 = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
cocoa = "0.26"
objc = "0.2.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-positioner = "2"
tauri-plugin-window-state = "2"

[features]
default = []
test-harness = ["tempfile"]

[dev-dependencies]
tempfile = "3"

[dependencies.tempfile]
version = "3"
optional = true

# Main Tauri application binary
[[bin]]
name = "rn-desktop-2"
path = "src/main.rs"

# Daemon and CLI binaries
[[bin]]
name = "right-now-daemon"
path = "src/bin/right-now-daemon.rs"

[[bin]]
name = "todo"
path = "src/bin/todo.rs"

# Stable shim binary - install this to ~/.local/bin/todo
[[bin]]
name = "todo-shim"
path = "src/bin/todo-shim.rs"

# Test harness binary (only built with test-harness feature)
[[bin]]
name = "rn-test-harness"
path = "src/bin/rn-test-harness.rs"
required-features = ["test-harness"]
